--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "leveldown": "^1.6.0",
     "levelup": "^1.3.5",
     "nan": "^2.7.0",
+    "wrtc": "^0.0.65",
     "ws": ""
   },
   "devDependencies": {
